--- a/style.scss
+++ b/style.scss
@@ -64,29 +64,36 @@ section {
 }
 
 .sections-wrapper {
-  margin: 4rem;
+  margin: 2rem;
   border: 12px solid var(--border-color);
 }
 
 // Main Section
 .main {
-  .wrapper {
-  }
-
   .heading {
     margin-bottom: 1.5rem;
   }
   .top-content {
     margin-top: 4rem;
     display: flex;
+    flex-direction: column-reverse;
     gap: 2rem;
   }
 
   .left {
+    .heading {
+      display: block;
+    }
+
+    .voucher-bg {
+      display: flex;
+      justify-content: center;
+    }
     img {
       max-width: 300px;
       box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
       padding: 0.5rem;
+      width: 100%;
     }
   }
 
@@ -96,8 +103,9 @@ section {
   }
   .top,
   .middle,
-  .bottom {
-    padding: 1.5rem;
+  .bottom,
+  .common {
+    padding: 0.5rem;
     border-top: 2px solid var(--border-color);
     background-color: var(--light-gray);
   }
@@ -107,7 +115,7 @@ section {
   }
   .items {
     display: grid;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 1.5rem;
   }
 
@@ -147,26 +155,42 @@ section {
     }
   }
 
+  textarea,
+  input[type="text"] {
+    outline: none;
+    border-radius: 8px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    border: solid 1px #d4d4d4;
+    color: #888;
+    width: 100%;
+    transition: 0.3s ease-in-out;
+
+    &:focus {
+      border: 1px solid var(--blue);
+    }
+  }
+
   .text-area {
   }
 
   // Bottom
   .form-control {
     resize: none;
-    border: solid 1px #d4d4d4;
-    color: #888;
-    width: 100%;
+
     height: 6rem;
     color: #555;
-    border-radius: 8px;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    transition: 0.3s ease-in-out;
+
     outline: none;
-    padding: 1rm;
+    padding: 0.8rem;
 
     &:focus {
       border: 1px solid var(--blue);
     }
+  }
+  .bottom-content {
+    margin-top: 1.5rem;
+    display: grid;
+    gap: 2rem;
   }
 
   .text {
@@ -175,6 +199,130 @@ section {
 
     .blue {
       color: var(--blue);
+    }
+  }
+
+  .inputs {
+    display: grid;
+
+    gap: 2rem;
+    width: 100%;
+
+    input {
+      width: 100%;
+      padding: 0.8rem;
+    }
+
+    span {
+      font-size: 0.9rem;
+      margin-left: 0.4rem;
+    }
+  }
+
+  .checkboxs {
+    display: grid;
+    gap: 1rem;
+  }
+  .checkbox {
+    display: flex;
+    font-size: 0.9rem;
+    gap: 0.3rem;
+
+    input[type="checkbox"] {
+      margin-right: 0.5rem;
+    }
+
+    a {
+      color: var(--blue);
+      text-decoration: underline;
+
+      &:hover {
+        color: var(--text-col);
+        text-decoration: none;
+      }
+    }
+  }
+
+  .btn {
+    display: flex;
+    justify-content: flex-end;
+    a {
+      background-color: var(--blue);
+      padding: 0.8rem 4rem;
+      color: var(--white);
+      border-radius: 3px;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
+  }
+}
+
+@media (min-width: 400px) {
+  .main {
+    .items {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 1.5rem;
+    }
+  }
+}
+
+@media (min-width: 640px) {
+  .main {
+    .top,
+    .middle,
+    .bottom,
+    .common {
+      padding: 1.5rem;
+    }
+    .items {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 1.5rem;
+    }
+    .left {
+      .heading {
+        display: hidden;
+      }
+
+      img {
+        min-width: 300px;
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .sections-wrapper {
+    margin: 4rem;
+    border: 12px solid var(--border-color);
+  }
+  .main {
+    .items {
+      display: grid;
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+      gap: 1.5rem;
+    }
+
+    .inputs {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 4rem;
+      width: 100%;
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .main {
+    .top-content {
+      display: flex;
+      flex-direction: row;
+    }
+    .items {
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      gap: 1.5rem;
     }
   }
 }
